--- a/src/KordanorsCabal/KordanorsCabal.vbproj
+++ b/src/KordanorsCabal/KordanorsCabal.vbproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>KordanorsCabal</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
     <OptionStrict>On</OptionStrict>
+    <StartupObject>KordanorsCabal.Program</StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,6 +19,10 @@
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KordanorsCabal.Game\KordanorsCabal.Game.vbproj" />
