--- a/src/KordanorsCabal/KordanorsCabal.vbproj
+++ b/src/KordanorsCabal/KordanorsCabal.vbproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\SPLORR.UI\SPLORR.UI.vbproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Import Include="SPLORR.UI" />
+  </ItemGroup>
+
 </Project>
