title screen processor

--- a/src/KordanorsCabal.UI/KordanorsCabal.UI.vbproj
+++ b/src/KordanorsCabal.UI/KordanorsCabal.UI.vbproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\SPLORR.UI\SPLORR.UI.vbproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Import Include="SPLORR.UI" />
+  </ItemGroup>
+
 </Project>
