some very explody boilerplate for starting a game

--- a/src/KordanorsCabal.UI/KordanorsCabal.UI.vbproj
+++ b/src/KordanorsCabal.UI/KordanorsCabal.UI.vbproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Import Include="KordanorsCabal.Game" />
     <Import Include="SPLORR.UI" />
   </ItemGroup>
 
