the character is created, and you still cant play!

--- a/src/KordanorsCabal.Game/KordanorsCabal.Game.vbproj
+++ b/src/KordanorsCabal.Game/KordanorsCabal.Game.vbproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Import Include="KordanorsCabal.Data" />
     <Import Include="SPLORR.Data" />
+    <Import Include="SPLORR.Game" />
   </ItemGroup>
 
 </Project>
