book of holy bolt exists

--- a/src/KordanorsCabal.Game/KordanorsCabal.Game.vbproj
+++ b/src/KordanorsCabal.Game/KordanorsCabal.Game.vbproj
@@ -29,4 +29,8 @@
     <Import Include="SPLORR.Game" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Item\Descriptor\Book\" />
+  </ItemGroup>
+
 </Project>
