add refernce from game to data in common

--- a/src/SPLORR.Game/SPLORR.Game.vbproj
+++ b/src/SPLORR.Game/SPLORR.Game.vbproj
@@ -18,4 +18,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SPLORR.Data\SPLORR.Data.vbproj" />
+  </ItemGroup>
+
 </Project>
