--- a/src/KordanorsCabal.Data.Tests/KordanorsCabal.Data.Tests.vbproj
+++ b/src/KordanorsCabal.Data.Tests/KordanorsCabal.Data.Tests.vbproj
@@ -48,4 +48,8 @@
     <ProjectReference Include="..\KordanorsCabal.Data\KordanorsCabal.Data.vbproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enum\" />
+  </ItemGroup>
+
 </Project>
