--- a/src/KordanorsCabal.Data/KordanorsCabal.Data.vbproj
+++ b/src/KordanorsCabal.Data/KordanorsCabal.Data.vbproj
@@ -19,11 +19,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KordanorsCabal.Schema\KordanorsCabal.Schema.vbproj" />
     <ProjectReference Include="..\SPLORR.Data\SPLORR.Data.vbproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Import Include="SPLORR.Data" />
+	<Import Include="KordanorsCabal.Schema" />
   </ItemGroup>
 
 </Project>
