--- a/src/KordanorsCabal.Schema/KordanorsCabal.Schema.vbproj
+++ b/src/KordanorsCabal.Schema/KordanorsCabal.Schema.vbproj
@@ -14,4 +14,13 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Import Include="KordanorsCabal.Schema.My" />
+    <Import Include="Microsoft.Data.Sqlite" />
+  </ItemGroup>
+
 </Project>
