item types have constants

--- a/src/KordanorsCabal.Game/KordanorsCabal.Game.vbproj
+++ b/src/KordanorsCabal.Game/KordanorsCabal.Game.vbproj
@@ -31,6 +31,8 @@
 
   <ItemGroup>
     <Import Include="KordanorsCabal.Data" />
+    <Import Include="KordanorsCabal.Game.My" />
+    <Import Include="KordanorsCabal.Schema" />
     <Import Include="SPLORR.Data" />
     <Import Include="SPLORR.Game" />
   </ItemGroup>
