--- a/src/KordanorsCabal.UI/KordanorsCabal.UI.vbproj
+++ b/src/KordanorsCabal.UI/KordanorsCabal.UI.vbproj
@@ -24,7 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Import Include="KordanorsCabal.Data" />
     <Import Include="KordanorsCabal.Game" />
+    <Import Include="KordanorsCabal.Schema" />
     <Import Include="SPLORR.UI" />
   </ItemGroup>
 
